[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/lobby.gd" type="Script" id=1]
[ext_resource path="res://scene/title.tscn" type="PackedScene" id=2]
[ext_resource path="res://image/StartEnd/Local.png" type="Texture" id=3]
[ext_resource path="res://image/StartEnd/Local2.png" type="Texture" id=4]
[ext_resource path="res://image/StartEnd/Online.png" type="Texture" id=5]
[ext_resource path="res://image/StartEnd/Online2.png" type="Texture" id=6]
[ext_resource path="res://image/StartEnd/host.png" type="Texture" id=7]
[ext_resource path="res://image/StartEnd/host_sel.png" type="Texture" id=8]
[ext_resource path="res://image/StartEnd/join.png" type="Texture" id=9]
[ext_resource path="res://image/StartEnd/join_sel.png" type="Texture" id=10]
[ext_resource path="res://image/GameScene/Game.png" type="Texture" id=11]
[ext_resource path="res://image/StartEnd/chose_char.png" type="Texture" id=12]
[ext_resource path="res://image/StartEnd/lets_party.png" type="Texture" id=13]
[ext_resource path="res://image/StartEnd/lets_party_hover.png" type="Texture" id=14]
[ext_resource path="res://image/StartEnd/select_focus.png" type="Texture" id=15]
[ext_resource path="res://image/StartEnd/c1.png" type="Texture" id=16]
[ext_resource path="res://image/StartEnd/little_arrow_button_hover.png" type="Texture" id=17]
[ext_resource path="res://image/StartEnd/little_arrow_button.png" type="Texture" id=18]
[ext_resource path="res://image/StartEnd/ready.png" type="Texture" id=19]
[ext_resource path="res://image/StartEnd/ready_hover.png" type="Texture" id=20]
[ext_resource path="res://sound/Start.ogg" type="AudioStream" id=21]

[node name="Lobby" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="start_scene" parent="." index="0" instance=ExtResource( 2 )]

[node name="local" type="TextureButton" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 572.0
margin_top = 187.0
margin_right = 618.0
margin_bottom = 204.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="online" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 572.0
margin_top = 205.0
margin_right = 618.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="connect" type="Panel" parent="." index="3"]

self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 46.0
margin_right = 297.0
margin_bottom = 200.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="host" type="TextureButton" parent="connect" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 184.0
margin_top = 37.0
margin_right = 226.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Rect" ]

[node name="join" type="TextureButton" parent="connect" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 183.0
margin_top = 74.0
margin_right = 225.0
margin_bottom = 86.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
expand = true
_sections_unfolded = [ "Rect", "Textures" ]

[node name="error_label" type="Label" parent="connect" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 15.0
margin_top = 125.0
margin_right = 257.0
margin_bottom = 139.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="name" type="LineEdit" parent="connect" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 93.0
margin_top = 36.0
margin_right = 233.0
margin_bottom = 60.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Caret", "Material", "Placeholder" ]

[node name="ip" type="LineEdit" parent="connect" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 93.0
margin_top = 73.0
margin_right = 232.0
margin_bottom = 97.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Placeholder", "Rect" ]

[node name="map_icon" type="Sprite" parent="." index="4"]

visible = false
position = Vector2( 240.102, 139.099 )
z_as_relative = false
texture = ExtResource( 11 )
_sections_unfolded = [ "Transform", "Visibility", "Z", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="map_ui" type="TextureRect" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 12 )
stretch_mode = 0
__meta__ = {
"_edit_lock_": true
}

[node name="maps" type="Panel" parent="." index="6"]

editor/display_folded = true
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 127.0
margin_top = -156.0
margin_right = 347.0
margin_bottom = -6.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
_sections_unfolded = [ "Visibility" ]

[node name="right_map" type="TextureButton" parent="maps" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 115.0
margin_top = 270.0
margin_right = 193.0
margin_bottom = 294.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Rect", "Textures" ]

[node name="left_map" type="TextureButton" parent="maps" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 33.0
margin_top = 281.0
margin_right = 111.0
margin_bottom = 306.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
expand = true
_sections_unfolded = [ "Rect", "Textures" ]

[node name="Label" type="Label" parent="maps" index="2"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -174.0
margin_top = -22.0
margin_right = -134.0
margin_bottom = -8.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "map"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="start" type="TextureButton" parent="maps" index="3"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 62.0
margin_top = 404.0
margin_right = 165.0
margin_bottom = 424.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 14 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="players" type="Panel" parent="." index="7"]

editor/display_folded = true
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 393.0
margin_top = 113.0
margin_right = 645.0
margin_bottom = 468.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
_sections_unfolded = [ "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="player1" type="Panel" parent="players" index="0"]

editor/display_folded = true
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -392.0
margin_top = -112.0
margin_right = -264.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="select" type="Sprite" parent="players/player1" index="0"]

visible = false
position = Vector2( 64, 63 )
texture = ExtResource( 15 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="player_icon" type="Sprite" parent="players/player1" index="1"]

position = Vector2( 64, 64 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="players/player1" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "P1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="right" type="TextureButton" parent="players/player1" index="3"]

visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -37.0
margin_right = -5.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="left" type="TextureButton" parent="players/player1" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 51.0
margin_top = 126.0
margin_right = 105.0
margin_bottom = 161.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ready" type="TextureButton" parent="players/player1" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 131.0
margin_top = 11.0
margin_right = 160.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 19 )
texture_disabled = ExtResource( 20 )
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="player2" type="Panel" parent="players" index="1"]

editor/display_folded = true
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -393.0
margin_top = 30.0
margin_right = -265.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="select" type="Sprite" parent="players/player2" index="0"]

visible = false
position = Vector2( 64, 63 )
texture = ExtResource( 15 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="player_icon" type="Sprite" parent="players/player2" index="1"]

position = Vector2( 64, 64 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="players/player2" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "P1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="right" type="TextureButton" parent="players/player2" index="3"]

visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -37.0
margin_right = -5.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="left" type="TextureButton" parent="players/player2" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 51.0
margin_top = 126.0
margin_right = 105.0
margin_bottom = 161.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ready" type="TextureButton" parent="players/player2" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 131.0
margin_top = 11.0
margin_right = 160.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 19 )
texture_disabled = ExtResource( 20 )
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="player3" type="Panel" parent="players" index="2"]

editor/display_folded = true
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -41.0
margin_top = -112.0
margin_right = 87.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="select" type="Sprite" parent="players/player3" index="0"]

visible = false
position = Vector2( 64, 63 )
texture = ExtResource( 15 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="player_icon" type="Sprite" parent="players/player3" index="1"]

position = Vector2( 64, 64 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="players/player3" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "P1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="right" type="TextureButton" parent="players/player3" index="3"]

visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -37.0
margin_right = -5.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="left" type="TextureButton" parent="players/player3" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 51.0
margin_top = 126.0
margin_right = 105.0
margin_bottom = 161.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ready" type="TextureButton" parent="players/player3" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 131.0
margin_top = 11.0
margin_right = 160.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 19 )
texture_disabled = ExtResource( 20 )
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="player4" type="Panel" parent="players" index="3"]

editor/display_folded = true
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -41.0
margin_top = 30.0
margin_right = 87.0
margin_bottom = 158.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
_sections_unfolded = [ "Rect", "Theme", "Visibility" ]

[node name="select" type="Sprite" parent="players/player4" index="0"]

visible = false
position = Vector2( 64, 63 )
texture = ExtResource( 15 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="player_icon" type="Sprite" parent="players/player4" index="1"]

position = Vector2( 64, 64 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="players/player4" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "P1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="right" type="TextureButton" parent="players/player4" index="3"]

visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -37.0
margin_right = -5.0
margin_bottom = -2.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="left" type="TextureButton" parent="players/player4" index="4"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 51.0
margin_top = 126.0
margin_right = 105.0
margin_bottom = 161.0
rect_rotation = 180.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 17 )
texture_hover = ExtResource( 18 )
expand = true
stretch_mode = 3
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="ready" type="TextureButton" parent="players/player4" index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 131.0
margin_top = 11.0
margin_right = 160.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 19 )
texture_disabled = ExtResource( 20 )
_sections_unfolded = [ "Rect", "Textures" ]
__meta__ = {
"_edit_lock_": true
}

[node name="list" type="ItemList" parent="players" index="4"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -227.0
margin_top = 61.0
margin_right = 20.0
margin_bottom = 140.0
rect_scale = Vector2( 0.6, 0.6 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
items = [  ]
select_mode = 0
allow_reselect = false
icon_mode = 1
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Columns", "Icon", "Rect", "Visibility" ]

[node name="error" type="AcceptDialog" parent="." index="8"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 55.0
margin_bottom = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Alert!"
resizable = false
dialog_hide_on_ok = true

[node name="TextureRect" type="TextureRect" parent="." index="9"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 21 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="pressed" from="connect/host" to="." method="_on_host_pressed"]

[connection signal="pressed" from="connect/join" to="." method="_on_join_pressed"]

[connection signal="pressed" from="maps/right_map" to="." method="_on_right_map_pressed"]

[connection signal="pressed" from="maps/left_map" to="." method="_on_left_map_pressed"]

[connection signal="pressed" from="maps/start" to="." method="_on_start_pressed"]

[connection signal="pressed" from="players/player1/right" to="." method="_on_right_pressed"]

[connection signal="pressed" from="players/player1/left" to="." method="_on_left_pressed"]

[connection signal="pressed" from="players/player1/ready" to="." method="_on_ready_pressed"]

[connection signal="pressed" from="players/player2/right" to="." method="_on_right_pressed"]

[connection signal="pressed" from="players/player2/left" to="." method="_on_left_pressed"]

[connection signal="pressed" from="players/player2/ready" to="." method="_on_ready_pressed"]

[connection signal="pressed" from="players/player3/right" to="." method="_on_right_pressed"]

[connection signal="pressed" from="players/player3/left" to="." method="_on_left_pressed"]

[connection signal="pressed" from="players/player3/ready" to="." method="_on_ready_pressed"]

[connection signal="pressed" from="players/player4/right" to="." method="_on_right_pressed"]

[connection signal="pressed" from="players/player4/left" to="." method="_on_left_pressed"]

[connection signal="pressed" from="players/player4/ready" to="." method="_on_ready_pressed"]


